# Dexy

./: .gitignore  README.md
docs/: performance.md
firmware/: .gitignore  AdcInput.cpp  AdcInput.h  CMakeLists.txt  CompileDefs.h  Core0.cpp  Core0.h  Core1.cpp  Core1.h  CritSec.h  DataTable.h  Debug.h  Defer.h  Defs.h  Dexy.h  Display.cpp  Display.h  Encoder.cpp  Encoder.h  Envelope.cpp  Envelope.h  Error.cpp  Error.h  Flash.cpp  Flash.h  Gpio.cpp  Gpio.h  IrqDispatch.cpp  IrqDispatch.h  LICENSE  Lockout.cpp  Lockout.h  Operator.cpp  Operator.h  PatchChanges.cpp  PatchChanges.h  PatchData.h  Patches.cpp  Patches.h  Patches1.h  (+30 more)
firmware/doc/: .gitignore  Doxyfile.doxy.template
hardware/: .gitignore  Dexy-BOM.csv  Dexy.kicad_pcb  Dexy.kicad_prl  Dexy.kicad_pro  Dexy.kicad_sch  Digital.kicad_sch  README.md
hardware/panel/: panel.kicad_pcb  panel.kicad_prl  panel.kicad_pro
patches/: default-new-sine.dexy  default.dexy  new patchbank.dexy
software/: .gitignore
software/ConvertAlgoData/: ConvertAlgoData.cpp  ConvertAlgoData.sln  ConvertAlgoData.vcxproj  ConvertAlgoData.vcxproj.filters  LICENSE  README.md
software/DexyPatch/: .gitignore  DexyPatch.sln  LICENSE  README.md  init-version-info.bat
software/DexyPatch/DexyPatch/: .gitignore  App.axaml  App.axaml.cs  AssemblyInfo.cs  DexyPatch.csproj  Icons.axaml  Program.cs  Roots.xml  Version.cstemplate  ViewLocator.cs
software/DexyPatch/DexyPatch/Controls/: EnvelopePic.cs  ParamSlider.cs
software/DexyPatch/DexyPatch/Models/: Algorithm.cs  AlgorithmData.cs  DexyDefs.cs  EnvParams.cs  OpParams.cs  Patch.cs  PatchBank.cs
software/DexyPatch/DexyPatch/Services/: DataManager.cs  DexyDevice.cs  DialogService.cs  IDataManager.cs  IDexyDevice.cs  IDialogService.cs  ILiveUpdater.cs  IMessageBoxService.cs  IService.cs  ISettingsManager.cs  LiveUpdater.cs  MessageBoxService.cs  Service.cs  ServiceRunner.cs  SettingsManager.cs  StubDialogService.cs  StubMessageBoxService.cs
software/DexyPatch/DexyPatch/Utils/: CommPort.cs  CommPortStream.cs  ConvertString.cs  ErrorLog.cs  MidiNotes.cs  ServiceThread.cs  SysUtils.cs  TextTailBuffer.cs
software/DexyPatch/DexyPatch/Utils/PatchChanges/: NameChange.cs  OpParamSetting.cs  OpSettingChange.cs  PatchBankChanges.cs  PatchChange.cs  PatchChangeBase.cs  PatchSetting.cs  PatchSettingChange.cs
software/DexyPatch/DexyPatch/Utils/Zpp/: IZppSerialize.cs  ZppException.cs  ZppReader.cs  ZppSerialize.cs  ZppWriter.cs
software/DexyPatch/DexyPatch/ViewModels/: DexySettingsViewModel.cs  DexyViewModel.cs  MainWindowViewModel.cs  OperatorViewModel.cs  PatchBankViewModel.cs  PatchViewModel.cs  ViewModelBase.cs
software/DexyPatch/DexyPatch/Views/: DexySettingsView.axaml  DexySettingsView.axaml.cs  DexyView.axaml  DexyView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  OperatorView.axaml  OperatorView.axaml.cs  PatchBankView.axaml  PatchBankView.axaml.cs  PatchView.axaml  PatchView.axaml.cs
software/DexyPatch/doc/: .gitignore  Doxyfile.doxytemplate
software/PatchDump/: .gitignore  Banner.h  CmdLine.h  LICENSE  PatchDump.sln  PatchDump.vcxproj  PatchDump.vcxproj.filters  README.md  init-version-info.bat  main.cpp  system.h  version.h  version.htemplate
